--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -534,24 +534,11 @@ background: #e4e4e4;
     color: #555;
     text-decoration: none;
 }
-/*#studio-nav .studio-nav-wrap h3 a span {
-	font-size: 22px;
-	color: #555;
-	font-weight: bold;
-	float: right;
-	padding: 7px 0px 0px;
-}*/
+
 #studio-nav .studio-nav-wrap h3 a{
     display: block;
     padding-top: 2px;
 }
-/*#studio-nav .studio-nav-wrap h3 span{
-    display: block;
-    font-size: 11px;
-    margin-top: -7px;
-    white-space: nowrap;
-    font-weight: normal;
-}*/
 
 #epcurate-nav .epcurate-nav-wrap h3 a {
     float: left;
@@ -935,7 +922,7 @@ background: #e4e4e4;
 #title-func {
     position: relative;
     z-index: 56;
-    padding: 21px 0 17px;
+    padding: 26px 0 17px;
     background: url(../images/bg_main.png) repeat -210px 0;
 }
 
@@ -1224,7 +1211,7 @@ padding: 4px 10px 0;
   height: 28px;
   position: absolute;
   top: 9px;
-  right: 5px;
+  right: 7px;
 }
 
 #footer ul#footer-list li {
@@ -1320,575 +1307,7 @@ padding: 4px 10px 0;
   margin: 0 133px 0 0;
 }
 
-/* Login */
-#login-layer {
-    position: absolute;
-    top: 0px;
-    left: 0;
-    z-index: 49;
-    overflow: hidden;
-    width: 100%;
-    min-width: 1010px;
-    height: 100%;
-    background: url(../images/bg_main.png) repeat;
-  font-size: 13px;
-}
-#login-holder {
-  top: 50%;
-  width: 630px;
-  height: 400px;
-  display: block;
-  position: relative;
-  margin: -200px auto 0 auto;
-  text-align: center;
-}
-#login-layer h1 {
-    font-size: 45px;
-  font-weight: bold;
-  text-align: center;
-  margin: 0 0 15px 0;
-  color: #b4b4b4;
-    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.4), 0px 1px 0px rgba(255, 255, 255, 0.4);
-}
-#login-layer h2, #signup-layer h2, #forgot-password-layer h2 {
-    font-size: 30px;
-  font-weight: bold;
-  text-align: center;
-  margin: 0 auto 20px auto;
-  color: #b4b4b4;
-    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.4), 0px 1px 0px rgba(255, 255, 255, 0.4);
-}
-#login-layer h3 {
-    font-size: 20px;
-  font-weight: bold;
-  text-align: center;
-  margin: 0 auto 15px auto;
-  padding: 0 0 20px 0;
-  position: relative;
-  color: #555;
-  background: url("../images/bg_divider.png") repeat-x scroll left bottom transparent;
-}
-#login-layer .btn-fb {
-  position: relative;
-  margin: 0 auto 15px auto;
-  display: inline-block;
-}
-#login-layer .btn-gray {
-  position: relative;
-  margin: 0 auto 10px auto;
-  display: block;
-  float: right;
-}
-#login-layer .input-white {
-  position: relative;
-  margin: 0 15px 0 0;
-  display: inline-block;
-}
-#login-layer .btn-holder {
-  position: relative;
-  height: 30px;
-  text-align: right;
-  margin: 10px 0 10px 0;
-  width: 553px;
-}
-#login-layer span {
-  font-weight: bold;
-  text-decoration: underline;
-  cursor: pointer;
-}
-#login-layer span:hover {
-  color: #999;
-}
-#login-layer .btn-holder span {
-  line-height: 30px;
-  margin: 0 10px 0 0;
-}
-#login-layer .input-white .center {
-  width: 212px;
-  padding: 0 0 0 20px;
-}
-
-/* Sign Up */
-#signup-layer {
-  width:100%;
-  height: 100%;
-  position: absolute;
-  margin:0;
-  z-index:99;
-  background:#777;
-  overflow:hidden;
-  font-size:13px;
-  display:none;
-  top: 0;
-  background: url(../images/bg_b70.png);
-}
-#signup-holder {
-  width: 578px;
-  margin: -158px 0 0 -289px;
-  height: 316px;
-  display: block;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-}
-#signup-holder .l {
-  background: url(../images/overlay_bg_m_l.png) no-repeat;
-  height:365px;
-  width:11px;
-  float:left;
-  display:inline;
-}
-#signup-holder .r {
-  background: url(../images/overlay_bg_m_r.png) no-repeat;
-  height:365px;
-  width:11px;
-  float:left;
-  display:inline;
-}
-#signup-holder .m {
-  background: url(../images/overlay_bg_m_c.png) repeat-x;
-  height:365px;
-  position:relative;
-  width:556px;
-  float:left;
-  display:inline;
-  padding: 24px 0 0px;
-}
-#btn-signup-close {
-  width:22px;
-  height:24px;
-  position:absolute;
-  top:3px;
-  right:-7px;
-  background: url(../images/btn_close_l.png) no-repeat 0 0;
-  cursor: pointer;
-}
-#btn-signup-close:hover {
-  background-position: 0 -24px;
-}
-#signup-holder .input-m-g  {
-  width: 238px;
-}
-#signup-holder .left {
-  left: 20px;
-  height:215px;
-  display: block;
-}
-#signup-holder .right {
-  left: 15px;
-  height:215px;
-  display: block;
-}
-#signup-holder .note {
-  width: 245px;
-  text-align:justify;
-  text-justify:inter-word;
-}
-#signup-holder .btn-white {
-  bottom: 0;
-  position: absolute;
-}
-#signup-holder .btn-white .center, #signin-panel-signup .input-gray .center {
-  width: 238px;
-}
-#signup-holder .btn-white .left, #signup-holder .btn-white .right {
-  left: auto;
-  height: 32px;
-}
-#signup-checkbox {
-  width:15px;
-  height:15px;
-  background: url(../images/icon_checkbox.png) 0 0 no-repeat;
-  cursor: pointer;
-  display: block;
-  float: left;
-}
-#signup-checkbox.on {
-  background-position: 0 -50px;
-}
-#signup-agree {
-  width: 220px;
-  display: block;
-  float: right;
-}
-#signin-panel-signup .input-gray .left, #signin-panel-signup .input-gray .right {
-  left: auto;
-  height: 30px;
-}
-
-/* Forgot-password-layer */
-#forgot-password-layer {
-  width: 100%;
-  min-width: 1016px;
-  height: 100%;
-  position: absolute;
-  background: url(../images/bg_b70.png);
-  overflow: hidden;
-  font-size: 13px;
-  z-index: 60;
-  display: none;
-  top: 0;
-}
-#forgot-password-holder {
-  width: 357px;
-  margin: -151px 0 0 -178px;
-  height: 303px;
-  display: block;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-}
-#forgot-password-holder .input-m-g {
-  width:238px;
-}
-#forgot-password-holder .l {
-  background: url(../images/overlay_bg_l.png) no-repeat;
-  height:303px;
-  width:11px;
-  float:left;
-}
-#forgot-password-holder .r {
-  background: url(../images/overlay_bg_r.png) no-repeat;
-  height:303px;
-  width:11px;
-  float:left;
-}
-#forgot-password-holder .m {
-  width:263px;
-  height:274px;
-  background: url(../images/overlay_bg_c.png) repeat-x;
-  padding: 24px 36px 0 36px;
-  position:relative;
-  float:left;
-  display:inline;
-}
-#btn-forgot-password-close {
-  width:22px;
-  height:24px;
-  background: url(../images/btn_popup_close.png) no-repeat;
-  position:absolute;
-  top:7px;
-  right:-3px;
-  cursor: pointer;
-}
-#btn-forgot-password-close:hover {
-  background: url(../images/btn_popup_close_press.png) no-repeat;
-}
-#forgot-password-msg {
-  display:none;
-}
-#forgot-password-holder .m .msg {
-  width: 246px;
-  text-align:justify;
-  margin: 0 0 8px 8px;
-}
-#forgot-password-holder .m .msg-error {
-  width: 246px;
-  color:#ed1a1b;
-  text-align:justify;
-  margin: 0 0 8px 8px;
-}
-#forgot-password-holder .m .forgotpic {
-  width:255px;
-  height:29px;
-  margin:2px 0 24px 0;
-}
-#forgot-password-holder .m .input-gray {
-  width:246px;
-  height:30px;
-  overflow:hidden;
-  margin:0 0 8px 7px;
-}
-#forgot-password-holder .m .input-gray .center {
-  width: 240px;
-}
-#forgot-password-holder .m .input-m-set .hint {
-  position:absolute;
-  left:0;
-}
-.back-to-sign {
-  width: 246px;
-  text-align: center;
-  margin: 0 0 8px 8px;
-  position: absolute;
-  bottom: 16px;
-  cursor: pointer;
-  text-decoration: underline;
-  font-weight: bold;
-}
-.back-to-sign:hover {
-  color:#999;
-}
-#forgot-password-holder a {
-  color: #555;
-  font-weight:bold;
-}
-#forgot-password-holder a:hover {
-  color: #999;
-}
-#btn-reset-password {
-  position:absolute;
-  left: 44px;
-  bottom: 44px;
-}
-#btn-reset-password .center {
-  width: 238px;
-}
-
-/* btn-fb-sign-in */
-.btn-fb {
-  cursor: pointer;
-  font-size:15px;
-}
-.btn-fb-left {
-  cursor: pointer;
-  position: relative;
-  float: left;
-  width: 31px;
-  height: 34px;
-  background: url(../images/btn_fb_left.png) no-repeat;
-}
-.btn-fb-right {
-  cursor: pointer;
-  position: relative;
-  float: left;
-  width: 5px;
-  height: 34px;
-  background: url(../images/btn_fb_right.png) no-repeat;
-}
-.btn-fb-middle {
-  cursor: pointer;
-  position: relative;
-  float: left;
-  height: 34px;
-  white-space: nowrap;
-  color:#fff;
-  background: url(../images/btn_fb_middle.png) repeat-x;
-  line-height: 27px;
-  width: 213px;
-  text-align: center;
-}
-.btn-fb:hover .btn-fb-left {
-  opacity: 0.5;
-  filter: alpha(opacity=70);
-  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
-}
-.btn-fb:hover .btn-fb-right {
-  opacity: 0.5;
-  filter: alpha(opacity=70);
-  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
-}
-.btn-fb:hover .btn-fb-middle {
-  opacity: 0.5;
-  filter: alpha(opacity=70);
-  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
-}
-
-/* btn-gray */
-.btn-gray {
-  cursor: pointer;
-  font-size:15px;
-  color: #555;
-  display: inline-block;
-}
-.btn-gray .left {
-  cursor: pointer;
-  position: relative;
-  float: left;
-  width: 3px;
-  height: 32px;
-  background: url(../images/btn_gray.png) no-repeat;
-}
-.btn-gray .right {
-  cursor: pointer;
-  position: relative;
-  float: left;
-  width: 3px;
-  height: 32px;
-  background: url(../images/btn_gray.png) no-repeat 0 -32px;
-}
-.btn-gray .center {
-  cursor: pointer;
-  position: relative;
-  float: left;
-  height: 26px;
-  white-space: nowrap;
-  background: url(../images/btn_gray.png) repeat-x 0 -64px;
-  padding: 6px 0 0;
-  text-align: center;
-}
-.btn-gray:hover .left {
-  background: url(../images/btn_gray.png) no-repeat 0 -96px;
-}
-.btn-gray:hover .right {
-  background: url(../images/btn_gray.png) no-repeat 0 -128px;
-}
-.btn-gray:hover .center {
-  color: #999;
-  background: url(../images/btn_gray.png) repeat-x 0 -160px;
-}
-.center a, .center a {
-  text-decoration: none;
-  padding: 2px 24px 2px 24px;
-  color: #555;
-}
-.center a:hover, .center a:hover, .center:hover a, .center:hover a {
-  text-decoration: none;
-  color: #999;
-}
-
-/* btn-white */
-.btn-white {
-  cursor: pointer;
-  font-size:15px;
-  display: inline-block;
-}
-.btn-white .left {
-  cursor: pointer;
-  position: relative;
-  float: left;
-  width: 3px;
-  height: 32px;
-  background: url(../images/btn_white.png) no-repeat;
-}
-.btn-white .right {
-  cursor: pointer;
-  position: relative;
-  float: left;
-  width: 3px;
-  height: 32px;
-  background: url(../images/btn_white.png) no-repeat 0 -32px;
-}
-.btn-white .center {
-  cursor: pointer;
-  position: relative;
-  float: left;
-  height: 26px;
-  white-space: nowrap;
-  background: url(../images/btn_white.png) repeat-x 0 -64px;
-  padding: 6px 0 0;
-  text-align: center;
-}
-.btn-white:hover .left {
-  background: url(../images/btn_white.png) no-repeat 0 -96px;
-}
-.btn-white:hover .right {
-  background: url(../images/btn_white.png) no-repeat 0 -128px;
-}
-.btn-white:hover .center {
-  background: url(../images/btn_white.png) repeat-x 0 -160px;
-  color: #999;
-}
-
-/* input_white */
-.input-white {
-  height: 30px;
-  position:relative;
-  margin:0 8px 0 0;
-}
-.input-white .left {
-  position: relative;
-  float: left;
-  width: 3px;
-  height: 30px;
-  background: url(../images/input_white.png) no-repeat;
-}
-.input-white .right {
-  position: relative;
-  float: left;
-  width: 3px;
-  height: 30px;
-  background: url(../images/input_white.png) no-repeat 0 -30px;
-}
-.input-white .center {
-  position: relative;
-  float: left;
-  width: 230px;
-  height: 30px;
-  line-height: 30px;
-  text-indent:6px;
-  background: url(../images/input_white.png) repeat-x 0 -60px;
-  text-align:left;
-  border: 0;
-  color: #555;
-}
-.icon-set {
-  width:16px;
-  height:16px;
-  position:absolute;
-  top:8px;
-  left:7px;
-  z-index:2;
-}
-.input-m-g .icon-set {
-  width:16px;
-  height:16px;
-  position:absolute;
-  top:8px;
-  left:3px;
-  z-index:2;
-}
-
-/* Input Gray */
-.input-gray {
-  height: 30px;
-  position:relative;
-  margin:0 8px 0 0;
-}
-.input-gray .left {
-  position: relative;
-  float: left;
-  width: 3px;
-  height: 30px;
-  background: url(../images/input_gray.png) no-repeat;
-}
-.input-gray .right {
-  position: relative;
-  float: left;
-  width: 3px;
-  height: 30px;
-  background: url(../images/input_gray.png) no-repeat 0 -30px;
-}
-.input-gray .center {
-  position: relative;
-  float: left;
-  height: 30px;
-  line-height: 30px;
-  text-indent:6px;
-  background: url(../images/input_gray.png) repeat-x 0 -60px;
-  text-align:left;
-  border: 0;
-  color: #555;
-}
-.textfield {
-  background:none;
-  border:0;
-  position:absolute;
-  top:7px;
-  left:30px;
-  color: #555;
-  width:210px;
-}
-.msg-error {
-  color:#ed1a1b;
-  display: none;
-}
-
-.notice {
-  color: #555;
-}
-
-.left {
-  width: 50%;
-  float: left;
-  position: relative;
-}
-.right {
-  width: 50%;
-  float: right;
-  position: relative;
-}
-
+/* Title */
 .index-collect-title{
     color: #FFF;
     font-size: 45px;
@@ -1896,7 +1315,6 @@ padding: 4px 10px 0;
     text-align: center;
     text-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
 }
-
 .cms-setup{
     color: #c4c4c4;
     font-size: 32px;
