--- a/stylesheets/episode.css
+++ b/stylesheets/episode.css
@@ -12,6 +12,15 @@
     float: left;
     height: 27px;
     line-height: 27px;
+
+}
+#title-func h2 span{
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+    -ms-text-overflow: ellipsis;
+    -moz-binding: url('ellipsis.xml#ellipsis');
 }
 
 #channel-name {
@@ -30,7 +39,7 @@
 
 #title-func ul li {
     float: left;
-    margin-right: 15px;
+    margin-right: 10px;
 }
 
 #title-func ul li.last {
@@ -65,11 +74,12 @@ body.mac #title-func ul li p span a {
 
 #ep-time-list h3,
 #ep-no               h3 {
-    margin-bottom: 10px;
-    color: #777;
+    margin: 10px 0 10px 0;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 30px;
     text-align: center;
+	color: #b4b4b4;
+    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.4), 0px 1px 0px rgba(255, 255, 255, 0.4);
 }
 
 #ep-time-list .btns {
@@ -381,7 +391,7 @@ body.mac #title-func ul li p span a {
 
 #ep-list ul li .episode p.img a:hover img.img {
     background-color: #fff;
-    opacity: 0.7;
+    opacity: 0.5;
     filter: alpha(opacity=70);
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
 }
@@ -454,7 +464,7 @@ body.mac #title-func ul li p span a {
 }
 
 #ep-list ul li .episode h3 a:hover {
-	color: #777;
+	color: #999;
 }
 
 #ep-list ul li .episode .btns {
@@ -497,7 +507,7 @@ body.mac #title-func ul li p span a {
 
 #ep-list ul li .episode .btns .btn-wrap ul li a.disable,
 #ep-list ul li .episode .btns .btn-wrap ul li a:hover {
-    color: #777;
+    color: #999;
 }
 
 #ep-list ul li .episode .btns .btn-wrap ul li a.edit span,
@@ -567,7 +577,7 @@ body.mac #title-func ul li p span a {
 }
 
 #ep-list ul li .curator p a:hover {
-	color: #777;
+	color: #999;
 }
 
 #ep-list ul li p.drag {
@@ -648,7 +658,7 @@ body.mac #title-func ul li p span a {
   position: relative;
   cursor: default;
   margin-top: 0;
-  color: #777;
+  color: #999;
 }
 #episode-list.ui-sortable li.list_collapse_top.on {
   color: #555;	
@@ -657,6 +667,8 @@ body.mac #title-func ul li p span a {
   background: url(../images/bg_list_expand.png) no-repeat right -280px;
   padding: 0 3px 0 0;
   display: block;
+  float: none;
+  width: auto;
 }
 #episode-list.ui-sortable li.list_collapse_top .right .middle {
   background: url(../images/bg_list_expand.png) repeat 0 -308px;
@@ -670,12 +682,14 @@ body.mac #title-func ul li p span a {
   position: relative;
   cursor: default;
   margin-top: 0;
-  color: #777;
+  color: #999;
 }
 #episode-list.ui-sortable li.list_expand .right {
   background: url(../images/bg_list_expand.png) no-repeat right -196px;
   padding: 0 3px 0 0;
   display: block;
+  width: auto;
+  float: none;
 }
 #episode-list.ui-sortable li.list_expand .right .middle {
   background: url(../images/bg_list_expand.png) repeat 0 -224px;
@@ -689,12 +703,14 @@ body.mac #title-func ul li p span a {
   position: relative;
   cursor: default;
   margin-top: 0;
-  color: #777;
+  color: #999;
 }
 #episode-list.ui-sortable li.list_collapse_bottom.on .right {
   background: url(../images/bg_list_expand.png) no-repeat right -280px;
   padding: 0 3px 0 0;
   display: block;
+  float: none;
+  width: auto;
 }
 
 #episode-list.ui-sortable li.list_collapse_bottom.on .right .middle {
@@ -742,10 +758,12 @@ body.mac #title-func ul li p span a {
   cursor: pointer;
 }
 #episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top:hover ,#episode-list.ui-sortable.ui-sortable-disabled li.list_expand:hover, #episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_bottom:hover {
-  color: #777;
+  color: #999;
 }
 #episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top:hover .right, #episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top.on .right {
   background: url(../images/bg_list_collapse_top.png) no-repeat right -112px;
+  float: none;
+  width: auto;
 }
 #episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top:hover .right .middle, #episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top.on .right .middle {
   background: url(../images/bg_list_collapse_top.png) repeat 0 -140px;
@@ -772,6 +790,8 @@ body.mac #title-func ul li p span a {
   background: url(../images/bg_list_expand.png) no-repeat right -28px;
   padding: 0 3px 0 0;
   display: block;
+  float: none;
+  width: auto;
 }
 #episode-list.ui-sortable.ui-sortable-disabled li.list_expand .right .middle {
   background: url(../images/bg_list_expand.png) repeat 0 -56px;
