"video number" (3.3 final req.)
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4622 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheets/ep-curation.css
+++ b/stylesheets/ep-curation.css
@@ -2467,6 +2467,17 @@ p.auto-height {
     display: block;
 }
 
+#storyboard .storyboard-list ul li p.order {
+    position: absolute;
+    top: -30px;
+    left: 0;
+    width: 94px;
+    margin: 0;
+    color: #999;
+    font: bold 17px Microsoft JhengHei;
+    text-align: center;
+}
+
 #storyboard .storyboard-list ul li p.img {
     position: relative;
     overflow: hidden;
