update from DS (982,1005~1009,1014,1026,1029)
版本: 1029
作者: chihwen
日期: 2013年5月16日 下午 10:12:30
訊息:
避免客戶端快取，更新 CSS 及 JS 引入檔的版本號 (?v=1026)

1. 避免客戶端快取，更新 CSS 及 JS 引入檔的版本號 (?v=1026)
2. 同步 src 版本 1027 (注意1027尚未完全同步完成)。
issue 6367
----
異動 : /fakeapi/channel-add.html
異動 : /fakeapi/channel-setting.html
異動 : /fakeapi/epcurate-curation.html
異動 : /fakeapi/epcurate-publish.html
異動 : /fakeapi/episode-list.html
異動 : /fakeapi/index.html
異動 : /fakeapi/login.html
異動 : /fakeapi/signin.html
異動 : /fakeapi/stylesheets/lightbox.css
異動 : /fakeapi/stylesheets/style.css

版本: 1026
作者: chihwen
日期: 2013年5月16日 下午 04:01:14
訊息:
完成 Sub-ep Hyper Link POI API 串接

1. 完成 Sub-ep Hyper Link POI API 串接。
2. 同步 src 版本 1015~1017,1019,1022,1024,1025 (注意1019~1025尚未完全同步完成)。
3. 因應新版 POI 結構及行為，重新命名結構及腳本，以符合新版 POI 語意。
4. 移除已過時的 POI 結構及腳本。
5. 調整 fakeapi 以模擬新版 POI API 操作邏輯。
   1. 依型態切換 poiPointId 及 poiEventId 以便鎖定資料作模擬。
   2. 修正 JSON 字串格式，以便可正確解析為 JSON 物件。
   3. 加入特殊指定序號資料，以便模擬不同型態的 POI 新增及切換。
6. 調整 basic.js 中的 showProcessingOverlay 處理中，
   與 showSavingOverlay 儲存中的 overlay z-index 設定，避免被 POI event overlay 檔住。
7. 調整 config.js 重新設計 POI_TYPE_MAP 結構，以整合 API 代碼及 plugin 型態名稱。
8. 調整 controller.js 匯入影片連結提示文案，改用 placeholder 屬性實現。
9. 調整 controller.js 改良 poi_campaign 的資料結構檢查。
10. 加入 Sub-ep POI Scheduled 及 Instant 多國語系設定。
issue 6367
----
異動 : /fakeapi/epcurate-curation.html
異動 : /fakeapi/fakeapi/channels_poi_points.php
異動 : /fakeapi/fakeapi/poi_events.php
異動 : /fakeapi/fakeapi/poi_points.php
異動 : /fakeapi/fakeapi/programs_poi_points.php
異動 : /fakeapi/fakeapi/users_poi_events.php
異動 : /fakeapi/images/bg_mobile.png
異動 : /fakeapi/images/btn_gray.png
異動 : /fakeapi/images/btns.png
已加入 : /fakeapi/images/icon-add.png
已加入 : /fakeapi/images/icon-minus.png
已加入 : /fakeapi/images/icon_info.png
異動 : /fakeapi/images/icon_nav.png
異動 : /fakeapi/javascripts/basic.js
異動 : /fakeapi/javascripts/config.js
異動 : /fakeapi/javascripts/controller.js
異動 : /fakeapi/javascripts/curation.js
異動 : /fakeapi/lang/en.json
異動 : /fakeapi/lang/zh.json
異動 : /fakeap

--- a/stylesheets/channel.css
+++ b/stylesheets/channel.css
@@ -180,12 +180,15 @@ body.mac #title-func h2 {
     float: left;
     margin: 0 5px 6px 0;
     border: none;
+	opacity: 0.5;
+    filter: alpha(opacity=50);
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
 }
 #channel-list li .photo-list:hover img.ep {
     background-color: #fff;
-    opacity: 0.5;
-    filter: alpha(opacity=50);
-    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+    opacity: 1.0;
+    filter: alpha(opacity=100);
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
 }
 
 
@@ -245,7 +248,7 @@ body.mac #title-func h2 {
 #channel-list li .func-wrap {
     float: right;
     position: relative;
-    width: 166px;
+    width: 196px;
     height: 116px;
 	margin: 5px 0 0 0;
 }
@@ -295,6 +298,20 @@ body.mac #title-func h2 {
     background: url(../images/btns.png) no-repeat;
     text-decoration: none;
     text-indent: -100000px;
+}
+
+#channel-list li .func-wrap .func-btns .btn-wrap ul li a.channel-poi {
+    background-position: 0 -2072px;
+}
+
+#channel-list li .func-wrap .func-btns .btn-wrap ul li a.channel-poi.disable,
+#channel-list li .func-wrap .func-btns .btn-wrap ul li a.channel-poi.disable:hover {
+    background-position: -46px -2071px;
+	cursor: default;
+}
+
+#channel-list li .func-wrap .func-btns .btn-wrap ul li a.channel-poi:hover {
+    background-position: -23px -2072px;
 }
 
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a.add {
