--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,7 +2,7 @@
 [TABLE OF CONTENTS]
     +common
         =btns
-
+        
 -----------------------------------------------------------------------------*/
 
 * {
@@ -37,6 +37,20 @@ abbr, acronym {
     display: none !important;
 }
 
+.poi-mask {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 1050;
+    width: 839px;
+    height: 594px;
+    margin: -300px 0 0 -424px;
+    border-radius: 10px;
+    background-color: #000;
+    opacity: 0.6;
+}
+
 /**
 *
 * =overlay
@@ -45,12 +59,12 @@ abbr, acronym {
 
 #overlay-s {
     display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  width: 100%;
-  height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1000;
+	width: 100%;
+	height: 100%;
     background: url(../images/bg_b70.png) repeat;
 }
 
@@ -60,8 +74,8 @@ abbr, acronym {
 
 #overlay-s .wrap {
     position: relative;
-  width: 100%;
-  height: 100%;
+	width: 100%;
+	height: 100%;
     border: 1px solid #0f0;
 }
 
@@ -70,24 +84,24 @@ abbr, acronym {
     top: 50%;
     left: 50%;
     width: 200px;
-  height: 84px;
+	height: 84px;
     margin: -42px 0 0 -90px;
     padding-left: 6px;
     background: url(../images/bg_processing.png) no-repeat 0 0;
     color: #999;
-  font-weight: bold;
+	font-weight: bold;
     font-size: 17px;
 }
 
 #overlay-s .overlay-content span {
-  display: block;
-  height: 84px;
-  line-height: 84px;
+	display: block;
+	height: 84px;
+	line-height: 84px;
 }
 
 #overlay-s .overlay-content span.overlay-right {
-  padding-right: 6px;
-  background: url(../images/bg_processing.png) no-repeat right -84px;
+	padding-right: 6px;
+	background: url(../images/bg_processing.png) no-repeat right -84px;
 }
 
 #overlay-s .overlay-content span.overlay-middle {
@@ -95,8 +109,8 @@ abbr, acronym {
     height: 45px;
     line-height: 45px;
     padding: 19px 0 20px 0;
-  background: url(../images/bg_processing.png) repeat-x 0 -168px;
-
+	background: url(../images/bg_processing.png) repeat-x 0 -168px;
+    
 }
 
 #overlay-s .overlay-content span.overlay-middle img {
@@ -111,14 +125,14 @@ abbr, acronym {
 *
 **/
 
-#content-wrap         .btns,
+#content-wrap     .btns,
 .lightbox-content .btns {
     height: 32px;
     padding: 0 0 0 3px;
     background: url(../images/btn_gray.png) no-repeat 0 0;
 }
 
-#content-wrap         .btns span,
+#content-wrap     .btns span,
 .lightbox-content .btns span {
     display: block;
     height: 32px;
@@ -126,8 +140,8 @@ abbr, acronym {
     background: url(../images/btn_gray.png) no-repeat right -32px;
 }
 
-#content-wrap         .btns span a,
-#content-wrap         .btns span input,
+#content-wrap     .btns span a,
+#content-wrap     .btns span input,
 .lightbox-content .btns span a,
 .lightbox-content .btns span input {
     display: block;
@@ -184,11 +198,11 @@ abbr, acronym {
     background: url(../images/popup_btn_middle_press.png) repeat-x !important;
 }
 
-#content-wrap         .btns                 span input,
-#content-wrap         .btns:hover     span input,
-#content-wrap         .btns.disable span input,
-.lightbox-content .btns                 span input,
-.lightbox-content .btns:hover     span input {
+#content-wrap     .btns         span input,
+#content-wrap     .btns:hover   span input,
+#content-wrap     .btns.disable span input,
+.lightbox-content .btns         span input,
+.lightbox-content .btns:hover   span input {
     background: none;
 }
 /*
@@ -282,6 +296,7 @@ abbr, acronym {
 }
 .ellipsis.multiline {
     white-space: normal;
+    word-wrap: break-word;
 }
 
 /* +header
@@ -289,7 +304,7 @@ abbr, acronym {
 
 #header {
     position: relative;
-    z-index: 50000;
+    z-index: 98;
     width: 100%;
     min-width: 1010px;
     height: 50px;
@@ -307,25 +322,25 @@ abbr, acronym {
 }
 
 #logo:hover {
-    background-position: 0 0;
+	background-position: 0 0;
 	opacity: 0.5;
 	filter: alpha(opacity=50);
 	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
 }
 
 #nav {
-  height: 28px;
-  position: absolute;
-  top: 7px;
-  right: 7px;
+	height: 28px;
+	position: absolute;
+	top: 7px;
+	right: 7px;
 }
 
 #nav li {
-  position: relative;
-  float: left;
-  height: 28px;
-  font-size: 14px;
-  line-height: 28px;
+	position: relative;
+	float: left;
+	height: 28px;
+	font-size: 14px;
+	line-height: 28px;
 }
 
 #nav li a {
@@ -352,19 +367,19 @@ abbr, acronym {
 }
 
 #nav li#home, #nav li#tv, #nav li#login {
-  padding: 0 0.5em 0 0.5em;
-  height: 38px;
-  cursor: pointer;
-  float: left;
-  font-weight: bold;
+	padding: 0 0.5em 0 0.5em;
+	height: 38px;
+	cursor: pointer;
+	float: left;
+	font-weight: bold;
 }
 #nav li#login {
-  padding: 0 0.5em 0 0.5em;
-  height: 38px;
-  cursor: default;
-  float: left;
-  color: #999;
-  font-weight: bold;
+	padding: 0 0.5em 0 0.5em;
+	height: 38px;
+	cursor: default;
+	float: left;
+	color: #999;
+	font-weight: bold;
 }
 
 #nav li#profile {
@@ -512,7 +527,7 @@ background: #e4e4e4;
 }
 
 #studio-nav     .studio-nav-wrap     h3{
-
+   
     margin-top: -2px;
     text-align: center;
 }
@@ -620,11 +635,11 @@ background: #e4e4e4;
 #studio-nav .studio-nav-wrap ul li:hover span a,
 #studio-nav .studio-nav-wrap ul li.on    span a {
     background: url(../images/popup_btn_middle_press.png) repeat-x;
-    color: #999;
+	color: #999;
 }
 
 #studio-nav .studio-nav-wrap ul li.on    span a {
-  	cursor: default;
+   	cursor: default;
 }
 
 
@@ -723,7 +738,7 @@ background: #e4e4e4;
     text-decoration: none;
 }
 #studio-nav .studio-nav-wrap .studio-setup .btn-middle a:hover {
-  color: #999;
+	color: #999;
 }
 
 #studio-nav .studio-nav-wrap .studio-setup .btn-middle a img {
@@ -749,7 +764,7 @@ background: #e4e4e4;
     margin-left: 3px;
 }
 #epcurate-nav .epcurate-nav-wrap ul li.on a span.nav-middle {
-  color: #999;
+	color: #999;
 }
 
 #epcurate-nav .epcurate-nav-wrap ul li.publish {
@@ -801,7 +816,7 @@ background: #e4e4e4;
     background-position: 0 -54px;
 }
 #epcurate-nav .epcurate-nav-wrap ul li a:hover span.nav-middle {
-  color: #999;
+	color: #999;	
 }
 
 #epcurate-nav .epcurate-nav-wrap ul li.publish a {
@@ -833,10 +848,10 @@ background: #e4e4e4;
 }
 
 #epcurate-nav .epcurate-nav-wrap .tip img {
-  position: absolute;
-  top: -2px;
-  left: 17px;
-  border: none;
+	position: absolute;
+	top: -2px;
+	left: 17px;
+	border: none;
 }
 
 #epcurate-nav .epcurate-nav-wrap .tip-left {
@@ -955,10 +970,10 @@ background: #e4e4e4;
 }
 
 #title-func h2 a.reload .tip img {
-  position: absolute;
-  top: -2px;
-  left: 23px;
-  border: none;
+	position: absolute;
+	top: -2px;
+	left: 23px;
+	border: none;
 }
 
 #title-func h2 a.reload .tip-left {
@@ -1071,7 +1086,7 @@ background: #e4e4e4;
 }
 
 #func-nav ul li.btns {
-  width: 160px;
+	width: 160px;
 }
 
 #func-nav ul li.btns a {
@@ -1091,6 +1106,10 @@ background: #e4e4e4;
     background: url(../images/icon_nav.png) no-repeat 0 0;
 }
 
+#func-nav ul li a.poi {
+    background: url(../images/icon_nav.png) no-repeat 0 -250px;
+}
+
 #func-nav ul li a.setting {
     background: url(../images/icon_nav.png) no-repeat 0 -50px;
 }
@@ -1107,37 +1126,41 @@ background: #e4e4e4;
     background: url(../images/icon_nav.png) no-repeat 0 -200px;
 }
 
-
 #func-nav ul li.active a.episode,
-#func-nav ul li               a.episode:hover {
+#func-nav ul li        a.episode:hover {
     background: url(../images/icon_nav.png) no-repeat 0 -25px;
     color: #fff;
 }
 
 #func-nav ul li.active a.setting,
-#func-nav ul li               a.setting:hover {
+#func-nav ul li        a.setting:hover {
     background: url(../images/icon_nav.png) no-repeat 0 -75px;
     color: #fff;
 }
 
+#func-nav ul li.active a.poi,
+#func-nav ul li        a.poi:hover {
+    background: url(../images/icon_nav.png) no-repeat 0 -275px;
+    color: #fff;
+}
+
 #func-nav ul li.active a.portal,
-#func-nav ul li               a.portal:hover {
+#func-nav ul li        a.portal:hover {
     background: url(../images/icon_nav.png) no-repeat 0 -125px;
     color: #fff;
 }
 
 #func-nav ul li.active a.store,
-#func-nav ul li               a.store:hover {
+#func-nav ul li        a.store:hover {
     background: url(../images/icon_nav.png) no-repeat 0 -175px;
     color: #fff;
 }
 
 #func-nav ul li.active a.brand,
-#func-nav ul li               a.brand:hover {
+#func-nav ul li        a.brand:hover {
     background: url(../images/icon_nav.png) no-repeat 0 -225px;
     color: #fff;
 }
-
 
 #func-nav ul li.active a {
 	cursor: default;
@@ -1182,48 +1205,48 @@ padding: 4px 10px 0;
 *----------------------------------------------------------------------------*/
 
 #footer-control {
-  width: 26px;
-  height: 48px;
-  background: url(../images/bg_footercontrol.png) no-repeat;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  z-index: 20000;
-  cursor: pointer;
+	width: 26px;
+	height: 48px;
+	background: url(../images/bg_footercontrol.png) no-repeat;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	z-index: 98;
+	cursor: pointer;
 }
 
 #footer-control.on {
-  background-position: 0 -50px;
+	background-position: 0 -50px;
 }
 
 #footer {
-  width: 100%;
-  min-width: 1010px;
-  height: 48px;
-  background: url(../images/bg_footer.png) repeat-x;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  z-index: 10000;
+	width: 100%;
+	min-width: 1010px;
+	height: 48px;
+	background: url(../images/bg_footer.png) repeat-x;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	z-index: 97;
 }
 
 #footer ul#footer-list {
-  height: 28px;
-  position: absolute;
-  top: 9px;
-  right: 7px;
+	height: 28px;
+	position: absolute;
+	top: 9px;
+   right: 7px;
 }
 
 #footer ul#footer-list li {
-  position: relative;
-  float: left;
-  width: 112px;
-  height: 28px;
-  margin: 0 0 0 5px;
-  padding: 0 0 0 8px;
-  background: url(../images/bg_header_input.png) 0 -50px no-repeat;
-  font-size: 13px;
-  line-height: 28px;
+	position: relative;
+	float: left;
+	width: 112px;
+	height: 28px;
+	margin: 0 0 0 5px;
+	padding: 0 0 0 8px;
+	background: url(../images/bg_header_input.png) 0 -50px no-repeat;
+	font-size: 13px;
+	line-height: 28px;
 }
 
 #footer ul#footer-list li a {
@@ -1233,78 +1256,78 @@ padding: 4px 10px 0;
 }
 
 #footer ul#footer-list li p.select-btn {
-  position: absolute;
-  top: 3px;
-  right: 5px;
-  z-index: 55;
-  width: 22px;
-  height: 23px;
-  background: url(../images/btns.png) 0 -400px no-repeat;
-  cursor: pointer;
+	position: absolute;
+	top: 3px;
+	right: 5px;
+	z-index: 55;
+	width: 22px;
+	height: 23px;
+	background: url(../images/btns.png) 0 -400px no-repeat;
+	cursor: pointer;
 }
 
 #footer ul#footer-list li p.select-txt {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 #footer ul#footer-list li p.select-btn.on,
 #footer ul#footer-list li p.select-btn:hover {
-  background-position: 0 -451px;
+	background-position: 0 -451px;
 }
 
 #footer ul#footer-list li ul.select-list {
-  display: none;
-  position: absolute;
-  bottom: 36px;
-  right: 0;
-  z-index: 60;
-  width: 120px;
-  border: 1px solid #b2b2b2;
-  border-bottom: none;
-  -moz-border-radius: 5px 5px 0 0;
-  -webkit-border-radius: 5px 5px 0 0;
-  border-radius: 5px 5px 0 0;
-  filter: alpha(Opacity=90);
-  opacity: 0.9;
+	display: none;
+	position: absolute;
+	bottom: 36px;
+	right: 0;
+	z-index: 60;
+	width: 120px;
+	border: 1px solid #b2b2b2;
+	border-bottom: none;
+	-moz-border-radius: 5px 5px 0 0;
+	-webkit-border-radius: 5px 5px 0 0;
+	border-radius: 5px 5px 0 0;
+	filter: alpha(Opacity=90);
+	opacity: 0.9;
 }
 
 #footer ul#footer-list li ul.select-list li {
-  width: 102px;
-  margin: 0;
-  padding: 0 9px;
-  border-top: 1px solid #f5f5f5;
-  border-bottom: 1px solid #c9c9c9;
-  background: none;
-  background-color: #d2d2d2;
-  cursor: pointer;
+	width: 102px;
+	margin: 0;
+	padding: 0 9px;
+	border-top: 1px solid #f5f5f5;
+	border-bottom: 1px solid #c9c9c9;
+	background: none;
+	background-color: #d2d2d2;
+	cursor: pointer;
 }
 
 #footer ul#footer-list li ul.select-list li:hover {
-  background-color: #e4e4e4;
-  color: #999;
+	background-color: #e4e4e4;
+	color: #999;
 }
 #footer ul#footer-list li ul.select-list li a:hover {
-  color: #999;
+	color: #999;
 }
 #footer ul#footer-list li ul.select-list li.on  {
-  background-color: #e4e4e4;
+	background-color: #e4e4e4;
 }
 #footer ul#footer-list li ul.select-list li.on a {
-  cursor: default;
-  color: #999;
+	cursor: default; 
+	color: #999;
 }
 #footer ul#footer-list li ul.select-list li:first-child {
-  border-top: none;
-  -moz-border-radius: 5px 5px 0 0;
-  -webkit-border-radius: 5px 5px 0 0;
-  border-radius: 5px 5px 0 0;
+	border-top: none;
+	-moz-border-radius: 5px 5px 0 0;
+	-webkit-border-radius: 5px 5px 0 0;
+	border-radius: 5px 5px 0 0;
 }
 #footer span {
-  font-size: 13px;
-  color: #555;
-  line-height: 48px;
-  float: right;
-  margin: 0 133px 0 0;
+	font-size: 13px;
+	color: #555;
+	line-height: 48px;
+	float: right;
+	margin: 0 133px 0 0;
 }
 
 /* Title */
