--- a/stylesheets/epcurate.css
+++ b/stylesheets/epcurate.css
@@ -434,6 +434,7 @@
     color: #555;
     font-family: Arial, Helvetica;
     font-size: 13px;
+    line-height: 30px\0;
 }
 
 #content-wrap form .disable .fmfield p.text {
